game逻辑类里加了个弃牌功能；建了俩测试类测了一下基本功能